terraform-3tier/nat_gateway.tf
################################
######## NAT GATEWAY ##########
################################

resource "aws_eip" "eip_nat" {
    vpc = true

    tags = {
        Name = "my-eip"
}
}


resource "aws_nat_gateway" "nat_1" {
  allocation_id = aws_eip.eip_nat.id
  subnet_id     = aws_subnet.public-web-subnet-2.id

  tags = {
    Name = "nAT1"
  }
}
